2005-08-03  Paolo Maggi  <paolo@gnome.org>

	* gedit-document.c (get_uri_shortname_for_display): cleaned up

	Fixed bug #137539: recent files menu broken with very long file names.

	* recent-files/*: sync to libegg. 

2005-08-03  Paolo Borelli  <pborelli@katamail.com>

	* gedit-view.c: workaround gtktextview scrolling bug. bug #172277.

2005-08-03  Paolo Maggi  <paolo@gnome.org>

	* gedit-mdi.c (tooltip_func): ellipsize the URI if needed.

2005-08-01  Paolo Borelli  <pborelli@katamail.com>

	* gedit-mdi.c (open_button_pressed_cb): ellipsize the recent list
	in the tool item.

2005-08-01  Ruben Vermeersch  <ruben@Lambda1.be>

	Fixed bug #309187 (Preselected highlighting mode in preferences)
	
	* dialogs/gedit-preferences-dialog.c setup_syntax_highlighting_page): 
	Automatically select the language of the active document.

2005-08-01  Guillaume Desmottes <cass@skynet.be>

	Fixed bug #308237 (sort the languages list alphabetically)

	* gedit-languages-manager.h: new function
	gedit_languages_manager_get_available_languages_sorted
	
	* gedit-languages-manager.c: new functions
	gedit_languages_manager_get_available_languages_sorted
	and language_compare. Add two global variables: languages_list 
	and languages_list_sorted
	
	* gedit-mdi.c: use gedit_languages_manager_get_available_languages_sorted
	instead of gtk_source_languages_manager_get_available_languages
	
	* dialogs/gedit-preferences-dialog.c: ditto

2005-08-01  Paolo Borelli  <pborelli@katamail.com>

	* recent-files/*: sync to libegg.

2005-08-01  Paolo Maggi  <paolo@gnome.org>

	* gedit-tooltips.c (gedit_tooltips_force_window): enable 
	ellipisization

	* gedit-utils.c (gedit_utils_str_middle_truncate): fixed to be
	UTF-8 compliant.

2005-07-29  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #306847 (RFE: conversion option for CP932, EUC_JP_MS)

	* gedit-encodings.c: added CP932 and EUC_JP_MS to the list
	of known encodings. 
	Patch by Kazuhiko Maekawa <Kazuhiko.Maekawa@Sun.COM>
