@@ -1,3 +1,7 @@
+2005-08-04  Paolo Maggi  <paolo@gnome.org>
+
+	* bonobo-mdi.c (bonobo_mdi_update_child): update the Documents menu too
+
 2005-08-03  Paolo Maggi  <paolo@gnome.org>
 
 	* gedit-document.c (get_uri_shortname_for_display): cleaned up
